testcrate/tests/ui/delete_expr.stderr
error[E0308]: mismatched types
  --> $DIR/delete_expr.rs:50:41
   |
50 |     let _ = sql!(Table.filter(field1 == value).delete());
   |                                         ^^^^^ expected &str, found integral variable
   |
   = note: expected type `&str`
              found type `{integer}`

error: aborting due to previous error

